--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 /* @tailwind base; */
 @tailwind components;
 @tailwind utilities;
+
+.ant-descriptions-small .ant-descriptions-row > td,
+.ant-descriptions-small .ant-descriptions-row > th {
+	padding-bottom: 0;
+}
